<resources>
    <string name="app_name">Popular Movies</string>
    <string name="connection_problem">Connection Problem</string>
    <string name="movie">movie</string>
    <string name="sub_title">sub title</string>
    <string name="movie_info">Movie Info </string>
    <string name="release_date">Release Date :  </string>
    <string name="_2019">2019</string>
    <string name="rating">Rating :  </string>
    <string name="_8">8</string>
    <string name="runtime">Runtime :  </string>
    <string name="_2_3_hr">2.3 hr</string>
    <string name="budget">Budget :  </string>
    <string name="_130_000">130,000</string>
    <string name="revenue">Revenue :  </string>
    <string name="_150_000">150,000</string>
    <string name="see_movie_detail">See Movie Detail</string>
</resources>
